# django-search

./: .gitignore  AUTHORS.rst  INSTALL.md  INSTALL.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  NOTICE.md  NOTICE.rst  README.md  README.rst  pyproject.toml  setup.py
djsearch/: __init__.py  apps.py  indexers.py  settings.py  utils.py
djsearch/settings/: __init__.py  settings.py
lib/djsearch/: apps.py  indexers.py  settings.py  utils.py
requirements/: pypi.txt
samples/web/app/: settings.py
samples/web/articles/: __init__.py  apps.py
samples/web/articles/admin/: admin.py
samples/web/articles/migrations/: 0001_initial.py
samples/web/articles/models/: indexers.py  models.py
